# scratchpad-rs

./: Cargo.toml  LICENSE  README.md
src/: main.rs  settings.rs
