[package]
name = "simple-notepad"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = { version = "1.0.11", features = ["high-dpi"] }
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.
anyhow = "1.0.41"
platform-dirs = "0.3.0"
simpleini = "0.1.1"